# ooc_loop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Development_Guide.md  Development_Guide_v2.md  LICENSE  Makefile  README.md  USER_GUIDE.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tip.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: default_config.yaml
configs/examples/: bimodal.yaml  step.yaml
data/scalar_verification/: scalar_verification_results.json
data/scalar_verification/ad_1d_Pe1/0/: U
data/scalar_verification/ad_1d_Pe1/1000/: C  Cx  T  U  phi
data/scalar_verification/ad_1d_Pe1/constant/polyMesh/: points
data/scalar_verification/ad_1d_Pe10/0/: U  p
data/scalar_verification/ad_1d_Pe10/1000/: Cy  T  U  phi
data/scalar_verification/ad_1d_Pe10/constant/polyMesh/: faces
data/scalar_verification/ad_1d_Pe100/0/: U
data/scalar_verification/ad_1d_Pe100/1000/: Cz  T  U  phi
data/scalar_verification/ad_1d_Pe100/1000/uniform/functionObjects/: functionObjectProperties
data/scalar_verification/ad_1d_Pe100/constant/polyMesh/: boundary
data/scalar_verification/ad_1d_Pe100/system/: blockMeshDict  controlDict
data/scalar_verification/ad_1d_Pe1000/0/: T  U
data/scalar_verification/ad_1d_Pe1000/1000/: C  Cx  Cy  Cz  T  U  phi
data/scalar_verification/ad_1d_Pe1000/constant/polyMesh/: boundary  faces  neighbour  owner  points
data/scalar_verification/ad_1d_Pe1000/system/: blockMeshDict  fvSolution
data/verification/: convergence_results.json
data/verification/convergence_1x/0/: C  Cx  Cy  Cz
data/verification/convergence_1x/42/: C  Cx  Cy  Cz  U  p  phi
data/verification/convergence_1x/42/uniform/: cumulativeContErr
data/verification/convergence_1x/42/uniform/functionObjects/: functionObjectProperties
data/verification/convergence_1x/constant/polyMesh/: boundary  faces  neighbour  owner  points
data/verification/convergence_1x/system/: blockMeshDict  fvSolution
data/verification/convergence_2x/0/: C  Cx  Cy  Cz  U
data/verification/convergence_2x/111/: C  Cx  Cy  Cz  U  p  phi
data/verification/convergence_2x/111/uniform/: cumulativeContErr  time
data/verification/convergence_2x/111/uniform/functionObjects/: functionObjectProperties
data/verification/convergence_2x/constant/polyMesh/: boundary  faces  neighbour  owner  points
data/verification/convergence_2x/system/: blockMeshDict  controlDict
data/verification/convergence_4x/0/: C  Cx  Cy  Cz  p
data/verification/convergence_4x/330/: C  Cx  Cy  Cz  U  p  phi
data/verification/convergence_4x/330/uniform/: cumulativeContErr  time
data/verification/convergence_4x/330/uniform/functionObjects/: functionObjectProperties
data/verification/convergence_4x/constant/polyMesh/: boundary  faces  neighbour  owner  points
data/verification/convergence_4x/system/: blockMeshDict  fvSchemes
docker/: Dockerfile  docker-compose.yml
docs/: index.md  installation.md  mkdocs.yml  publications.md  quickstart.md
docs/api/: analysis.md  cfd.md  config.md  geometry.md  interpretability.md  optimization.md  validation.md
docs/concepts/: interpretability.md  inverse-design.md  parametric-geometry.md  scalar-transport.md
examples/tumor_chip_bimodal/: config.yaml  run.py
examples/tumor_chip_linear_gradient/: README.md  config.yaml  run.py
examples/tumor_chip_linear_gradient/data/cases/run_opposing_none_H200_1776928959610/0/: U
examples/tumor_chip_linear_gradient/data/cases/run_opposing_none_H200_1776928959610/1460/: T  U  phi
examples/tumor_chip_linear_gradient/data/cases/run_opposing_none_H200_1776928959610/960/: C  Cx  Cy  Cz  U  p  phi
examples/tumor_chip_linear_gradient/data/cases/run_opposing_none_H200_1776928959610/system/: blockMeshDict
examples/tumor_chip_linear_gradient/data/cases/run_opposing_none_H200_1776928981843/0/: U
examples/tumor_chip_linear_gradient/data/cases/run_opposing_none_H200_1776928981843/417/: C  Cx  Cy  Cz  (+3 more)
examples/tumor_chip_linear_gradient/data/results/: evaluations_opposing_none_H200.jsonl  interpretability_index.json
examples/tumor_chip_linear_gradient/data/results/bo_opposing_none_H200/: evaluations.json  gp_model_state.pt
examples/tumor_chip_linear_gradient/data/validation_3d/: validation_3d_summary.json
examples/wss_uniformity/: README.md  config.yaml  run.py
ooc_optimizer/: __init__.py  cli.py
ooc_optimizer/analysis/: __init__.py  comparison.py  concentration_fields.py  convergence.py  wss_contours.py
ooc_optimizer/cfd/: __init__.py  foam_parser.py  inlet_premise_runner.py  meshing.py  metrics.py  scalar.py  solver.py  stepped_blockmesh.py  verification.py
ooc_optimizer/cfd/template/0/: T  U  p
ooc_optimizer/cfd/template/constant/: transportProperties
ooc_optimizer/cfd/template/system/: fvSchemes  fvSolution
ooc_optimizer/config/: __init__.py  logger.py  schema.py
ooc_optimizer/geometry/: __init__.py  generator.py  topology_blockmesh.py  validation.py
ooc_optimizer/interpretability/: __init__.py  gp_gradients.py  pipeline.py  sobol.py  tolerance.py
ooc_optimizer/optimization/: __init__.py  bo_loop.py  objectives.py  orchestrator.py
ooc_optimizer/utils/: __init__.py  io.py
ooc_optimizer/validation/: __init__.py  cfd_3d.py  cfd_3d_v2.py  compare_plots_v2.py  experimental.py
paper/joss/: paper.bib  paper.md
scripts/: finalize_premise_report.py  run_3d_validation.py  run_analysis.py  run_inlet_premise_test.py  run_interpretability.py  run_optimization.py  run_scalar_verification.py  run_single_verification.py  run_verification.py
tests/: conftest.py  test_cfd.py  test_config.py  test_foam_parser.py  test_geometry.py  test_interpretability.py  test_meshing.py  test_namespace_package.py  test_objectives.py  test_optimization.py  test_scalar_verification.py  test_schema_v2.py  test_stepped_blockmesh.py  test_topology_blockmesh.py  test_topology_blockmesh_3d.py  test_verification.py
tumor_chip_design/: __init__.py
(+443 files in other folders)
